[package]
authors = ["Rahix <rahix@rahix.de>"]
description = "A library for easily making your program configurable"
documentation = "https://rahix.github.io/ezconf/"
homepage = "https://github.com/Rahix/ezconf"
keywords = ["toml", "configuration", "config"]
license = "MIT/Apache-2.0"
name = "ezconf"
readme = "README.md"
repository = "https://github.com/Rahix/ezconf"
version = "0.1.0"

[dependencies]
toml = "0.4.6"
toml-query = "0.6.0"

[dev-dependencies]
lazy_static = "1.0.0"
